--- a/src/App.css
+++ b/src/App.css
@@ -51,11 +51,11 @@ header {
 }
 
 .mobile-header {
-  background-image: url(images/bg-header-mobile.svg);
+  background-image: url(../public/images/bg-header-mobile.svg);
 }
 
 .desktop-header {
-  background-image: url(images/bg-header-desktop.svg);
+  background-image: url(../public/images/bg-header-desktop.svg);
 }
 
 .job-listings-container {
